fixed links, aligned items, added resume picture

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,13 +44,14 @@ nav a {
     padding: 14px 20px;
     text-decoration: none;
     text-align: center;
-    color: rgb(250, 250, 248);
+    color: rgb(37, 15, 230);
     justify-content: center;
     font-size: x-large;
     font-family: 'Cambria', 'Cochin', 'Georgia', 'Times', 'Times New Roman', 'serif';
-  }
+    width: 30%;
+}
 
-  li {
+li {
     align-content: center;
     display:block;
     margin-left: auto;
@@ -59,7 +60,6 @@ nav a {
     white-space: nowrap;
     line-height: 2.5;
     font-size: 40px;
-    font-family: 'Courier New', Courier, monospace;
   }
 
 main {
@@ -100,7 +100,11 @@ aside {
 }
 
 h1 {
-    font-size: x-large;
+    font-size: large;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 40px;
 }
 
 
@@ -123,10 +127,25 @@ div {
     justify-content: center;
 }
 
+div h2 {
+    text-decoration: underline;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
+
+div header {
+    font-weight: bold;
+}
+
 p {
     font-size: x-large;
     word-spacing: 2px;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
 }
 
 h1.header {
@@ -150,7 +169,6 @@ h1.header {
 .experience img {
     border-radius: 50%;
     justify-content: center;
-    
 }
 
 img:hover {
@@ -158,12 +176,13 @@ img:hover {
 }
 
 .project {
-    border-style: solid;
-    border-width: 1px;
+    border-style: dotted;
+    border-width: 4px;
     padding: 10px;
     margin: 20px;
     flex: 0 0 300px;
     border-radius: 50px;
+    border-color: #91400b;
     /* box-shadow: 10px 5px 5px black; */
 }
 /* testing out 50 border radius. old value was 30 */
@@ -180,7 +199,7 @@ h3 {
     line-height: 2em;
     color: Black;
 }
-/* testing 2em */
+testing 2em
 
 @media screen and (max-width: 768px) {
     main,
